[package]
name = "rest"
version = "0.1.0"
authors = ["Igor Ying Zhang <igor_zhangying@fudan.edu.cn>"]
edition = "2021"
build = "build.rs"

[build_dependencies]
dunce = "1.0.0"

[dependencies]
rest_tensors = {path="../rest_tensors"}
rest_libcint = {path="../rest_libcint"}
anyhow = "1"
time = "0.1.12"
clap = "3.0.0-beta.2"
regex = "0.1.41"
itertools = "0.8"
serde_json = "1.0"
serde = {version="1.0",features=["derive"]}
num-complex = "0.4"
libc = "0.2"
hdf5 = "0.8.0"
chrono = "0.4"
jemallocator = "0.3.2"
rayon = "1.5"
crossbeam = "0.8"
libm = "0.2"
blas-sys = "0.7"
blas = "0.22"
lazy_static = "1.4"
toml = "0.7"
#tuple-conv = "1.0.1"
num-traits = "0.2.15"
statrs = "0.13"
rand = "0.3"
array_tool = "1.0.3"
fuzzy-matcher = "0.3.7"
#katex-doc = "0.1.0"
# seems to pull in libssl and libcrypto which is rejected by manylinux
reqwest = { version = "0.10", default-features = false, features = ["blocking", "json"] }

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module"]

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    #".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
    "/share/home/tygao/REST3.0/rest/katex.html",

]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench_tensors"
harness = false


[[bin]]
name = "rest"
path = "src/main.rs"

[lib]
name = "pyrest"
path = "src/lib.rs"
crate-type=["cdylib","lib"]
